--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -2,22 +2,28 @@
   img {
     width: 100%;
   }
+
   .carousel-slides {
     height: auto !important;
+
     .richText {
       padding: 0 1rem;
+
       &.even {
         padding: 0;
       }
     }
   }
+
   .carousel-slide {
     background: #fff;
+
     ul.tag-links {
       width: 80%;
       position: relative;
       top: -2.5rem;
       left: 10px;
+
       li {
         background: rgba(0, 0, 0, 0.5);
         border: none;
@@ -25,22 +31,27 @@
       }
     }
   }
+
   &.carousel-with-img-arrow-links {
     .image {
       @extend .bottom-right-arrow;
+
       &:after {
         width: 40px;
         line-height: 40px;
       }
     }
   }
+
   &.carousel-top-arrow-nav {
     .lSSlideOuter {
       margin-top: -6rem;
     }
+
     .lSSlide {
       margin-top: 6rem;
     }
+
     .lSAction {
       a {
         background-image: none;
@@ -52,18 +63,22 @@
         border-radius: 30px;
         top: 0rem;
         left: auto;
-        background-color: $color-grey-3;
+
         &:after {
           font-family: 'icomoon';
         }
+
         &.lSPrev {
           right: 80px;
+
           &:after {
             content: '\e906';
           }
         }
+
         &.lSNext {
           right: 0;
+
           &:after {
             content: '\e907';
           }
@@ -71,7 +86,24 @@
       }
     }
   }
-  .youtube-player > img {
+
+  &.grey-nav-arrow {
+    .lSAction {
+      a {
+        background-color: $color-grey-3;
+      }
+    }
+  }
+
+  .youtube-player>img {
     position: relative;
+  }
+
+  .leader-card-design {
+    .youtube-play-icon {
+      &::after {
+        display: none;
+      }
+    }
   }
 }
