--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -14,6 +14,9 @@
     display: flex;
     margin-bottom: 1rem;
     position: relative;
+    &:last-child{
+      margin-bottom: 0rem;
+    }
   }
   .story-image {
     width: 40%;
@@ -35,7 +38,7 @@
 .story-left-list {
   margin-bottom: 1rem;
   > .component-content {
-    height: 100%;
+    height: 100% !important;
   }
   @include sm {
     width: 50%;
