--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -38,14 +38,22 @@
       background: transparent;
       &.one-step-lower {
         width: 100%;
+        height: 65px;
+        line-height: 65px;
         &:after {
           content: none;
         }
       }
       &.one-step-upper {
         width: 100%;
+        height: 65px;
+        line-height: 65px;
+        margin-top: 65px;
         &:before {
           content: none;
+        }
+        &:after {
+          top: -100% !important;
         }
       }
       @include sm {
