--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -129,11 +129,14 @@
 
 .article-breadcrumbs{
   z-index: 1;
-  top: 1rem;
-  left: 1rem;
+ 
   background: #000;
   color: #fff;
-  width: auto;
+  @include xs{
+    top: 3.75rem;
+    left: 1rem;
+    max-width: fit-content;
+  }
   .breadcrumbs-list {
     list-style: none;
     list-style: none;
