--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -54,14 +54,16 @@
 /* Health pro End */
 
 .scroll-down-arrow {
+  background: rgba(255, 255, 255, 0.5);
   position: absolute;
-  bottom: -0.5rem;
-  a {
-    background: rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(32px);
-    backdrop-filter: blur(32px);
-    text-align: center;
-  }
+  width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  transform: translateX(-50%);
+  backdrop-filter: blur(32px);
 }
 
 @media only screen and (max-width: 1279px) and (min-width: 992px) {
@@ -156,21 +158,21 @@
 .article-social-share {
   width: 1.25rem;
   text-align: center;
-  @include sm{
+  @include sm {
     position: absolute;
     top: 0;
   }
- .reference-bp-share-icon-svg{
-   margin: 2rem 0;
-   display: inline-block;
-   @include sm{
-   display: block;
+  .reference-bp-share-icon-svg {
+    margin: 2rem 0;
+    display: inline-block;
+    @include sm {
+      display: block;
+    }
+    .share-icon {
+      padding: 1rem;
+      border: 2px solid $color-2;
+    }
   }
-   .share-icon{
-     padding: 1rem;
-     border: 2px solid $color-2; 
-   }
- }
 }
 
 .dashed-tag {
