--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -131,7 +131,7 @@
 
   background: #000;
   color: #fff;
-  @include xs {
+  @include sm {
     top: 3.75rem;
     left: 1rem;
     max-width: fit-content;
@@ -154,7 +154,6 @@
   }
 }
 .article-social-share {
-  width: 1.25rem;
   text-align: center;
   @include sm{
     position: absolute;
@@ -163,7 +162,9 @@
  .reference-bp-share-icon-svg{
    margin: 2rem 0;
    display: inline-block;
+    width: 3.25rem;
    @include sm{
+     width: auto;
    display: block;
   }
    .share-icon{
