--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -62,6 +62,7 @@
   align-items: center;
   justify-content: center;
   left: 50%;
+  bottom: 0;
   transform: translateX(-50%);
   backdrop-filter: blur(32px);
 }
