--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -40,20 +40,34 @@
         width: 100%;
         height: 65px;
         line-height: 65px;
+        background: var(--bg-color-2);
         &:after {
           content: none;
+        }
+        &:before {
+          content: none;
+          @include sm {
+            content: '';
+          }
         }
       }
       &.one-step-upper {
         width: 100%;
         height: 65px;
         line-height: 65px;
-        margin-top: 65px;
+        background: var(--bg-color-2);
+        @include sm {
+          margin-top: 65px;
+        }
         &:before {
           content: none;
         }
         &:after {
-          top: -100% !important;
+          content: none;
+          @include sm {
+            content: '';
+            top: -100% !important;
+          }
         }
       }
       @include sm {
