--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -161,6 +161,7 @@
   @include sm {
     position: absolute;
     top: 0;
+    text-align: left;
   }
   .reference-bp-share-icon-svg {
     margin: 2rem 0;
