--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -28,7 +28,7 @@
     padding: 1rem;
     background-color: $color-white;
     display: flex;
-    align-items: center;
+    flex-direction: column;
   }
 }
 
