--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -110,7 +110,7 @@
 .heading-with-bg {
   background-color: $color-primary;
   padding: 1rem;
-  font-weight: $font-semi-bold;
+  font-weight: $font-extra-bold;
 }
 .green-line {
   background: #30ea03;
