--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -383,7 +383,7 @@ body {
 
   p,
   .p {
-    color: $primary-text-color;
+    color: $color-1;
     font-size: $font-size-body-mobile;
     font-weight: $font-weight-body;
     line-height: $line-height-body-mobile;
