--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -88,6 +88,15 @@ a {
   font-size: 1.125rem;
 }
 
+.font-size--small {
+  font-size: 0.75rem;
+}
+.font-size--medium {
+  font-size: 0.875rem;
+}
+.font-size--large {
+  font-size: 1.125rem;
+}
 .color-grey-3 {
   color: $color-3;
 }
@@ -126,7 +135,6 @@ a {
 .strong,
 strong {
   font-weight: $font-extra-bold;
-  line-height: $line-height-160;
 }
 .text-left {
   text-align: left;
