--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -6,7 +6,7 @@
     position: relative;
     height: 100%;
     white-space: nowrap;
-    @extend .font-bold;
+    @extend .font-extra-bold;
     @include sm {
       width: 100%;
     }
@@ -110,7 +110,7 @@
 .heading-with-bg {
   background-color: $color-primary;
   padding: 1rem;
-  font-weight: $font-extra-bold;
+  font-weight: $font-semi-bold;
 }
 .green-line {
   background: #30ea03;
