--- a/src/scss/brand/components/hero-banner/_index.scss
+++ b/src/scss/brand/components/hero-banner/_index.scss
@@ -21,7 +21,10 @@
         white-space: nowrap;
       }
     }
-
+    .banner-subheading{
+      @extend .font-size--large;
+      @extend .line-height-160;
+    }
     .bottom-text {
       position: relative;
 
@@ -30,6 +33,10 @@
         position: absolute;
         bottom: 0;
         line-height: $line-height-150;
+      }
+      p{
+        @extend .font-size--medium;
+        @extend .line-height-150;
       }
     }
     .bordered-text {
