--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -1,5 +1,5 @@
 .profile-card-list-wrapper {
-  padding: 0 .5rem !important;
+  padding: 0 0.5rem !important;
   .media-container {
     flex-basis: 100%;
   }
