--- a/src/scss/brand/components/hero-banner/_index.scss
+++ b/src/scss/brand/components/hero-banner/_index.scss
@@ -33,6 +33,10 @@
         position: absolute;
         bottom: 0;
         line-height: $line-height-150;
+        right: 2rem
+      }
+      @include sd{
+        right: 0rem;
       }
       p{
         @extend .font-size--medium;
