--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -40,11 +40,7 @@
   &.carousel-with-img-arrow-links {
     .image {
       @extend .bottom-right-arrow;
-
-      &:after {
-        width: 40px;
-        line-height: 40px;
-      }
+      @extend .arrow-size-small;
     }
   }
 
