--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -15,7 +15,11 @@
       -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
+      &.banner-width-50percent{
+        min-width: calc(100% / 2 + 4rem);
+      }
     }
+
   }
   &.right-positioned {
     .banner-text {
