--- a/src/scss/brand/components/text-banners/_index.scss
+++ b/src/scss/brand/components/text-banners/_index.scss
@@ -9,12 +9,19 @@
     color: $color-white;
   }
 }
-.box-with-vertical-lines {
+.box-with-halfcover-bg{
+ >.component-content{
   @include sm {
-    background: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/measure-black.png');
     background-repeat: no-repeat;
     background-position: right;
     background-size: 50% 100%;
     margin-top: 1rem;
   }
+ }
 }
+.box-with-fullcover-bg{
+  >.component-content{
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+ }
