--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -4,7 +4,9 @@
   }
   .heading-with-bg {
     color: #000;
-    margin: 0 0 3rem
+    margin: 0 0 3rem;
+  font-weight: $font-extra-bold;
+  line-height: $line-height-150;
   }
   p {
     @extend .big-text;
