--- a/src/scss/default/theme/_index.scss
+++ b/src/scss/default/theme/_index.scss
@@ -26,7 +26,7 @@
 
 @media (min-width: $breakpoint-sm-min) {
   :root {
-    font-size: $font-size-body-mobile;
+    font-size: $font-size-body;
   }
 }
 
