--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -249,6 +249,11 @@ a[style*='visibility:hidden'] {
 .m-auto {
   margin: auto !important;
 }
+
+.p-m-0 {
+  padding: 0;
+}
+
 .p-m-x-1-5 {
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
