--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -36,6 +36,13 @@
       }
     }
   }
+  &.bottom-positioned{
+    @include md {
+      bottom: -11rem;
+      top: auto;
+      transform: translateX(-6rem);
+    }
+    }
 }
 .content-over-image {
   @include sm {
