--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -211,7 +211,7 @@
   }
 }
 
-.progress-timeline .flex.cols-d-5>div {
-  flex-basis: calc(100% / 5);
+.progress-timeline .flex.cols-d-5 > div {
+  flex-basis: calc(100% / 5) !important;
   gap: 1rem;
 }
