--- a/src/scss/brand/components/text-banners/_index.scss
+++ b/src/scss/brand/components/text-banners/_index.scss
@@ -11,6 +11,7 @@
 }
 .box-with-halfcover-bg {
   > .component-content {
+    background-image: none;
     @include sm {
       background-repeat: no-repeat;
       background-position: right;
