--- a/src/scss/brand/components/text-banners/_index.scss
+++ b/src/scss/brand/components/text-banners/_index.scss
@@ -13,6 +13,7 @@
   > .component-content {
     background-image: none;
     @include sm {
+      background: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/measure-black.png');
       background-repeat: no-repeat;
       background-position: right;
       background-size: 50% 100%;
