--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -121,3 +121,36 @@
   display: inline-block;
   margin: 0 0.5rem;
 }
+
+.underline {
+  position: relative;
+  margin-bottom: 2rem !important;
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -18px;
+    left: 0;
+    background-color: #9e9e9e;
+    width: 52px;
+    height: 8px;
+  }
+}
+
+.green-underline {
+  &::before {
+    background-color: #30ea03;
+  }
+}
+
+.grey-underline {
+  &::before {
+    background-color: #9e9e9e;
+  }
+}
+
+.pink-underline {
+  &::before {
+    background-color: $color-secondary-pink;
+  }
+}
