--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -65,3 +65,15 @@
     right: 0;
   }
 }
+
+.bottom-positioned{
+  -webkit-box-shadow: 0px 16px 40px -8px #0000001a;
+    box-shadow: 0px 16px 40px -8px #0000001a;
+    background-color: #fff;
+    padding: 2rem;
+    margin: -6rem auto 2rem;
+    @include md{
+      margin: -6rem 3rem 2rem;
+      float: right;
+    }
+}
