--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -412,13 +412,13 @@ header {
         @include md {
           right: -20px !important;
           top: 4px !important;
-          width: 14px !important;
-          height: 14px !important;
-          background-size: 14px !important;
+          width: 18px !important;
+          height: 18px !important;
+          background-size: 18px !important;
           position: relative;
         }
         @include sd {
-          top: 0.9rem !important;
+          top: 11px !important;
         }
         &:hover {
           &:after {
@@ -440,7 +440,7 @@ header {
           content: 'Search';
           position: absolute;
           left: -56px;
-          top: -2px;
+          top: 0px;
           font-size: $font-size-13;
           color: $color-black;
           font-family: $font-family-default;
