--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -4,9 +4,12 @@
   }
   .heading-with-bg {
     color: #000;
-    margin: 0 0 3rem;
+    margin: 0 0 2.5rem;
     font-weight: $font-extra-bold;
     line-height: $line-height-150;
+    @include sm{
+      margin: 0 0 1rem;
+    }
   }
   p {
     @extend .big-text;
@@ -18,7 +21,10 @@
     @extend .small-font;
   }
   .card-content-wrapper {
-    margin-bottom: 2rem;
+    margin-bottom: 0rem;
+    @include sd{
+      margin-bottom: 2rem
+    }
     .image {
       @extend .bottom-right-arrow;
       &:after {
