--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -64,6 +64,7 @@
         border-radius: 30px;
         top: 0rem;
         left: auto;
+        opacity: 1;
         &:after {
           font-family: 'icomoon';
         }
