--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -28,7 +28,7 @@
     }
   }
 }
-.reference-card-block {
+.profile-hero-banner {
   .profile-card-content {
     @include sm {
       padding: 1rem 3rem;
