--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -40,8 +40,7 @@
       justify-content: space-between;
     }
     li {
-      padding-right: 1rem;
-      padding-left: 0;
+      padding: 0 2px;
       &:before {
         display: none;
       }
