--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -316,6 +316,11 @@ a[style*='visibility:hidden'] {
     padding-right: 1.5rem !important;
   }
 }
+.m-d-b-4 {
+  @include sm {
+    margin-bottom: 4rem;
+  }
+}
 
 .object-fit-cover {
   .component-content {
