--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -316,7 +316,7 @@ a[style*='visibility:hidden'] {
     padding-right: 1.5rem !important;
   }
 }
-.m-d-b-4 {
+.m-d-b--4 {
   @include sm {
     margin-bottom: 4rem;
   }
