--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -61,6 +61,7 @@
   bottom: 2px;
   transform: translateX(-50%);
   backdrop-filter: blur(32px);
+  margin-bottom: -0.25rem;
   .icon-angle-down {
     width: 64px;
     height: 64px;
