--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -138,10 +138,12 @@ header {
               top: -5px;
               left: 6.2rem;
               @include md {
-                left: 6.2rem;
+                left: 5.2rem;
+                top: 0;
               }
               @include sd {
                 top: 0;
+                left: 6.2rem;
                 right: initial;
               }
             }
@@ -350,7 +352,7 @@ header {
       max-width: 5% !important;
     }
     @media only screen and (min-width: 1024px) {
-      right: -10px;
+      right: -16px;
       top: -6px;
     }
     .searchBox {
@@ -462,6 +464,7 @@ header {
           font-family: $font-family-default;
           @include sd {
             font-size: $font-size-16;
+            left: -56px;
           }
           @media only screen and (max-width: 991px) {
             display: none;
@@ -514,7 +517,7 @@ header {
     @include md {
       width: 24%;
       max-width: 25%;
-      margin-left: 6%;
+      margin-left: 3%;
       order: 3;
       .richText {
         margin-right: 0;
