--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -218,8 +218,11 @@
 
 .progress-timeline {
   .flex.cols-d-5 > div {
-    flex-basis: calc(100% / 5);
-    gap: 1rem;
+    flex-basis: 100%;
+    @include sd{
+      flex-basis: calc(100% / 5);
+      gap: 1rem;
+    }
   }
   .timeline-year {
     .heading-bg-strip {
@@ -229,8 +232,14 @@
         width: auto;
         font-weight: normal !important;
         padding-bottom: 2px;
-        background-color: transparent;
-        border-bottom: 44px solid $color-primary;
+        background-color: $color-primary;
+        border-bottom: none;
+        padding-top: 10px;
+        @include sm{
+          background-color: transparent;
+          border-bottom: 44px solid $color-primary;
+          padding-top: 0;
+        }
         &:before {
           width: 10vw;
           left: -10vw;
@@ -242,6 +251,11 @@
           right: -10vw;
           top: 76px;
           height: 44px;
+          @include sm{
+            width: 100vw;
+            right: -100vw;
+            top: 0;
+          }
         }
       }
     }
@@ -256,9 +270,18 @@
     &:last-of-type {
       span {
         &::after {
-          width: 40vw;
-          right: -40vw;
+          width: 100vw;
+          right: -100vw;
+          @include sm{
+            width: 40vw;
+            right: -40vw;
+          }
         }
+      }
+    }
+    &:nth-child(5) {
+      span{
+          border-color: $color-2 !important;
       }
     }
   }
