--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -219,7 +219,7 @@
 .progress-timeline {
   .flex.cols-d-5 > div {
     flex-basis: 100%;
-    @include sd{
+    @include sd {
       flex-basis: calc(100% / 5);
       gap: 1rem;
     }
@@ -235,7 +235,7 @@
         background-color: $color-primary;
         border-bottom: none;
         padding-top: 10px;
-        @include sm{
+        @include sm {
           background-color: transparent;
           border-bottom: 44px solid $color-primary;
           padding-top: 0;
@@ -251,7 +251,7 @@
           right: -10vw;
           top: 76px;
           height: 44px;
-          @include sm{
+          @include sm {
             width: 100vw;
             right: -100vw;
             top: 0;
@@ -272,7 +272,7 @@
         &::after {
           width: 100vw;
           right: -100vw;
-          @include sm{
+          @include sm {
             width: 40vw;
             right: -40vw;
           }
@@ -280,13 +280,16 @@
       }
     }
     &:nth-child(5) {
-      span{
-          border-color: $color-2 !important;
+      span {
+        border-color: $color-2 !important;
       }
     }
   }
   .big-text {
-    padding-left: 2rem !important;
+    padding-left: 1rem !important;
+    @include sm{
+      padding-left: 2rem !important;
+    }
   }
 }
 
