--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -155,7 +155,7 @@ text-center-m * {
   text-align: right;
 }
 
-a[style*='visibility:hidden'] {
+a[style*="visibility:hidden"] {
   padding: 0;
   font-size: 0;
   line-height: 0;
@@ -346,3 +346,11 @@ a[style*='visibility:hidden'] {
     margin-right: auto;
   }
 }
+
+/* Safari Specific CSS */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  body img {
+    height: auto;
+  }
+}
+/* Safari Specific CSS */
