--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -155,7 +155,7 @@ text-center-m * {
   text-align: right;
 }
 
-a[style*="visibility:hidden"] {
+a[style*='visibility:hidden'] {
   padding: 0;
   font-size: 0;
   line-height: 0;
