--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -105,6 +105,11 @@
     font-weight: normal;
     font-style: normal;
   }
+  .bar-over-img{
+    @include md{
+      width: 100vw;
+    }
+  }
 }
 
 .heading-with-bg {
