--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -1,15 +1,14 @@
 .positioned-banner-wrapper {
   .banner-text {
     height: auto;
-    left: 50%;
-    transform: translateX(-50%);
     position: relative;
     padding: 2rem;
     top: -5rem;
     -webkit-box-shadow: 0px 16px 40px -8px #0000001a;
     box-shadow: 0px 16px 40px -8px #0000001a;
     background-color: #fff;
-
+    margin-left: auto;
+    margin-right: auto;
     @include sm {
       top: 50%;
       position: absolute;
