--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -219,9 +219,13 @@
 }
 
 .progress-timeline {
-  margin-bottom: 5rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  margin-bottom: 5rem !important;
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+  overflow: hidden;
+  @include sm{
+    overflow: visible;
+  }
   .flex.cols-d-5 > div {
     flex-basis: 100%;
     @include sm {
@@ -232,7 +236,7 @@
   .timeline-year {
     margin-bottom: 3rem;
     .heading-bg-strip {
-      margin-bottom: 2rem !important;
+      margin-bottom: 1rem !important;
       @include sm {
         margin-bottom: 3rem !important;
       }
@@ -275,6 +279,10 @@
         &:before {
           width: 40vw;
           left: -40vw;
+          top: 0;
+          @include sm{
+            top: 82px;
+          }
         }
       }
     }
