--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -91,7 +91,7 @@
       &:after {
         top: 0 !important;
       }
-      &.bg-strip-170 {
+      &.bg-strip-large {
         &:before {
           height: 100%;
           @include sm {
