--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -30,6 +30,10 @@
   }
 
   &.left-positioned {
+    justify-content: center;
+    @include sm{
+      justify-content: right;
+    }
     .banner-text {
       @include sm {
         left: 0;
