--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -238,7 +238,7 @@
     .heading-bg-strip {
       margin-bottom: 1rem !important;
       overflow: hidden;
-      padding-left: .75rem;
+      padding-left: 0.75rem;
       @include sm {
         margin-bottom: 3rem !important;
         overflow: visible;
@@ -325,4 +325,20 @@
 
 .leader-card-bg {
   background-color: $bg-color-3;
+}
+
+.hoverable-box{
+  border: 1px solid $color-secondary-lime;
+  color: $color-secondary-lime;
+  display-on-hover{
+    visibility: hidden;
+  }
+}
+
+.hoverable-box:hover{
+  background-color: $color-secondary-lime;
+  color: $color-2;
+  display-on-hover{
+    visibility: visible;
+  }
 }
