--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -238,7 +238,7 @@
     .heading-bg-strip {
       margin-bottom: 1rem !important;
       overflow: hidden;
-      padding-left: .75rem;
+      padding-left: 0.75rem;
       @include sm {
         margin-bottom: 3rem !important;
         overflow: visible;
