--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -346,14 +346,8 @@ a[style*='visibility:hidden'] {
     margin-right: auto;
   }
 }
-.text-grey {
-  color: $color-3;
-}
 
-/* Safari Specific CSS */
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  body img {
-    height: auto;
-  }
+.efficiency-targets{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
-/* Safari Specific CSS */
