--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -322,6 +322,7 @@ a[style*='visibility:hidden'] {
   }
 }
 
+
 .object-fit-cover {
   .component-content {
     height: 100% !important;
@@ -349,7 +350,9 @@ a[style*='visibility:hidden'] {
 .text-grey {
   color: $color-3;
 }
-
+.img-full-height{
+  height: 100%;
+}
 /* Safari Specific CSS */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   body img {
