--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -7,6 +7,7 @@
     -webkit-box-shadow: 0px 16px 40px -8px #0000001a;
     box-shadow: 0px 16px 40px -8px #0000001a;
     background-color: #fff;
+    margin: auto !important;
     @include sm {
       top: 50%;
       position: absolute;
