--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -337,6 +337,10 @@
     width: 100%;
     padding: 1rem 0 !important;
     margin: 0;
+    @include sm{
+      width: auto;
+      padding: 10px 15px !important;
+    }
   }
 }
 
