--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -472,13 +472,13 @@ header {
         &::after {
           content: '';
           position: absolute;
-          left: -57px;
+          left: -58px;
           right: 0;
           top: -3px;
-          height: 20px;
+          height: 26px;
           background-color: $color-primary;
-          color: $color-2;
-          width: 70px;
+          color: #000;
+          width: 78px;
           z-index: -1;
           display: none;
         }
