--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -160,7 +160,10 @@
     }
   }
 }
-
+.lime-bg-strip{
+  background: $color-secondary-lime;
+  padding: 0 0.25rem;
+}
 .heading-with-bg {
   color: $color-2;
   background-color: $color-primary;
