--- a/src/scss/brand/components/hero-banner/_index.scss
+++ b/src/scss/brand/components/hero-banner/_index.scss
@@ -20,6 +20,12 @@
       @include sd {
         white-space: nowrap;
       }
+      @media only screen and (max-width: 1023px) and (min-width: 992px) {
+        font-size: 3rem;
+      }
+      @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+        font-size: 3.5rem;
+      }
     }
     .banner-subheading {
       @extend .font-size--large;
