--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -153,6 +153,7 @@
     padding-left: 1rem;
     line-height: 35px;
     margin: 0;
+    display: flex;
     .breadcrumb-list-item {
       margin-right: 1rem;
       a {
