--- a/src/scss/brand/components/hero-banner/_index.scss
+++ b/src/scss/brand/components/hero-banner/_index.scss
@@ -26,6 +26,9 @@
       @media only screen and (min-width: 1024px) and (max-width: 1280px) {
         font-size: 3.5rem;
       }
+      @media only screen and (min-width: 1281px) and (max-width: 1400px) {
+        font-size: 4rem;
+      }
     }
     .banner-subheading {
       @extend .font-size--large;
